# discord-bot

./: Cargo.toml
src/: env.rs  main.rs  time.rs
