[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread","time"]}
serenity = { version = "*", default-features = false, features = ["cache","client", "gateway", "rustls_backend", "model","standard_framework","utils","builder","time","http"] }